# simple-ai-trading

./: .env.example  .env.live.example  .env.paper_burnin  .env.paper_burnin.example  .gitignore  BACKTEST_BENCHMARKING.md  DECISION_WORKFLOW.md  Dockerfile  LIVE_DEPLOYMENT_CHECKLIST.md  MANUAL_POSITION_INTERVENTIONS.md  Makefile  OPERATOR_RUNBOOK.md  PAPER_BURNIN_CHECKLIST.md  README.md  STRATEGY.md  pyproject.toml  trading_burnin.db
.github/workflows/: burnin.yml
app/: config.py  main.py  scheduler.py
app/backtest/: compare.py  engine.py  fills.py  metrics.py
app/broker/: alpaca_client.py  execution.py  order_mapper.py
app/data/: alpaca_data.py  capitol_trades.py  historical_loader.py  market_calendar.py
app/db/: migrations.py  models.py  repo.py
app/monitoring/: alerts.py  dashboard.py
app/ops/: preflight.py
app/portfolio/: pnl.py  positions.py
app/reports/: daily_report.py
app/risk/: checks.py  kill_switch.py  sizing.py
app/strategy/: __init__.py  base.py  breakout.py  mean_reversion.py  momentum.py  politician_copy.py  politician_copy_replay.py  signals.py  trend_trailing_stop.py
app/stress/: __init__.py  drills.py
artifacts/backtests/: latest_politician_copy_replay.json
artifacts/backtests/politician_copy_replays/20260417-201248/: disclosures.csv  (+6 more)
logs/burnin/: INCIDENT_TEMPLATE.md
scripts/: burnin_report.py  check_alpaca_auth.py  recover_unresolved_state.sh  review_burnin_day.sh  run_burnin_day.sh  stress_drill.py
tests/: test_backtest_benchmarking.py  test_politician_copy.py  test_preflight.py  test_strategy.py  test_stress_drills.py
